src/tests/snapshots/niri__tests__window_opening__check_target_size@fsT-wfsBN-t.snap
---
source: src/tests/window_opening.rs
description: "open fullscreen: true\nwant fullscreen: BN\ntabbed"
expression: snapshot
---
initial configure:
size: 1280 × 720, bounds: 1239 × 688, states: [Fullscreen]

post-map configures:
size: 1280 × 720, bounds: 1239 × 688, states: [Fullscreen, Activated]

unfullscreen configure:
size: 607 × 688, bounds: 1239 × 688, states: [Activated]
